# pressure-mat

./: .gitignore  Readme.md
GUI/: GUI.py  Readme.md  get_mat_data.py  requirements.txt
GUI/modules/: calibration.py  communicator.py  mat_handler.py
GUI/resources/: Readme.md  averaged_calibration_curves.npy  calibrate_individual_sensor.py  default_calibration_curves.npy  generate_cal_curves.py  get_mat_data.py  plot_readings.py  temp_conv.py  test_matspeed.py
GUI/resources/raw_data/: matreading_0.0000000000pa.csv  matreading_0.0959480708pa.csv  matreading_0.2316404337pa.csv  matreading_0.2371269133pa.csv  matreading_0.2597423151pa.csv  matreading_0.3728192921pa.csv  matreading_0.4858962691pa.csv  matreading_0.5311270408pa.csv  matreading_1.6845121173pa.csv  matreading_1027.3175pa.csv  matreading_1098.2394pa.csv  matreading_1240.0832pa.csv  matreading_1311.0050pa.csv  matreading_1381.9269pa.csv  matreading_1594.6925pa.csv  matreading_176.2550pa.csv  matreading_1878.3800pa.csv  matreading_2162.0675pa.csv  matreading_247.1769pa.csv  matreading_2729.4425pa.csv  matreading_3013.1300pa.csv  matreading_3296.8175pa.csv  matreading_389.0207pa.csv  matreading_4006.0363pa.csv  matreading_4147.8800pa.csv  matreading_4289.7238pa.csv  matreading_4431.5675pa.csv  matreading_4573.4113pa.csv  matreading_4715.2550pa.csv  matreading_4857.0988pa.csv  matreading_530.8644pa.csv  matreading_5566.3175pa.csv  matreading_672.7082pa.csv  matreading_885.4738pa.csv  matreading_956.3957pa.csv
PCB_final/: PCB_final.kicad_pcb  PCB_final.kicad_prl  PCB_final.kicad_pro  PCB_final.kicad_sch  RP2040.kicad_sch  _autosave-PCB_final.kicad_pcb  fp-lib-table  interface_board.kicad_sch  powerSupplyFilter.kicad_sch
PCB_final/fabrication_files/: BOM.csv  PCB_final-NPTH.drl  PCB_final-PTH.drl  component_pos.csv
PCB_final/fabrication_files/gbr_files/: PCB_final-B_Cu.gbr  PCB_final-B_Mask.gbr  PCB_final-B_Paste.gbr  PCB_final-Edge_Cuts.gbr  PCB_final-F_Cu.gbr  PCB_final-F_Fab.gbr  PCB_final-F_Mask.gbr  PCB_final-F_Paste.gbr  PCB_final-F_Silkscreen.gbr  PCB_final-GND.gbr  PCB_final-PWR.gbr  PCB_final-job.gbrjob
PCB_final/production/PCB_Layout_for_Evan__Willow_Capstone_2023-11-09_11-02-04/: bom.csv  designators.csv
PCB_final/production/PCB_final_2023-10-12_19-27-57/: bom.csv  designators.csv  netlist.ipc  positions.csv
PCB_final/production/PCB_final_2023-10-17_18-51-16/: designators.csv  netlist.ipc
PCB_final/production/PCB_final_2023-10-17_19-50-11/: bom.csv  positions.csv
PCB_no_RP2040/PCB_no_rp2040/: #auto_saved_files#  PCB_no_rp2040.kicad_sch  ~PCB_no_rp2040.kicad_sch.lck
board_code/: CMakeLists.txt  Readme.md
board_code/inc/: adc.h  matterface.h  transmitter.h
board_code/inc/board_v1/: matterface.h
board_code/inc/board_v2/: matterface.h
board_code/inc/shared/: adc.h  custom_multicore.h  transmitter.h
board_code/src/: adc.c  main.c  matterface.c  transmitter.c
board_code/src/board_v1/: main.c  matterface.c
board_code/src/board_v2/: main.c  matterface.c
board_code/src/shared/: adc.c  custom_multicore.c  transmitter.c
board_kicad/: RP2040.kicad_sch  board.kicad_sch  interface_board.kicad_sch  powerSupplyFilter.kicad_sch
board_kicad/capstone_custom.pretty/: BEADC2012X145N.kicad_mod
board_kicad/kicad_symbol_lib/: Capstone_Library.kicad_sym
board_kicad/kicad_symbol_lib/BLM21BD272SN1L/: BLM21BD272SN1L.lib
board_kicad/production/PCB_Layout_for_Evan__Willow_Capstone_2023-11-09_11-02-04/: netlist.ipc  positions.csv
board_kicad/production/PCB_final_2023-10-17_19-50-11/: netlist.ipc
kicad_symbol_lib/BLM21BD272SN1L/: BEADC2012X145N.kicad_mod  BLM21BD272SN1L.step
prototypes/3x3/: Readme.md  board.py  host.py
prototypes/GUI/: GUI.py  Readme.md  calibration.py  communicator.py  default_calibration_curves.npy  get_mat_data.py
prototypes/GUI/data/: matreading_0.0000pa.csv
prototypes/GUI/modules/: calibration.py  communicator.py  mat_handler.py
prototypes/GUI/resources/: default_calibration_curves.npy  generate_cal_curves.py  plot_readings.py
prototypes/GUI/resources/raw_data/: matreading_0.0000pa.csv  matreading_1027.3175pa.csv  matreading_1098.2394pa.csv  matreading_1169.1613pa.csv  matreading_1240.0832pa.csv  matreading_1311.0050pa.csv  matreading_1381.9269pa.csv  matreading_1452.8488pa.csv  matreading_1523.7707pa.csv  matreading_1594.6925pa.csv  matreading_1665.6144pa.csv  matreading_176.2550pa.csv  matreading_1878.3800pa.csv  matreading_2162.0675pa.csv  matreading_247.1769pa.csv  matreading_2729.4425pa.csv  matreading_3013.1300pa.csv  matreading_3296.8175pa.csv  matreading_389.0207pa.csv  matreading_4006.0363pa.csv  matreading_4147.8800pa.csv  matreading_4289.7238pa.csv  matreading_4431.5675pa.csv  matreading_4573.4113pa.csv  matreading_4715.2550pa.csv  matreading_4857.0988pa.csv  matreading_5282.6300pa.csv  matreading_530.8644pa.csv  matreading_5566.3175pa.csv  matreading_601.7863pa.csv  matreading_672.7082pa.csv  matreading_743.6300pa.csv  matreading_814.5519pa.csv  matreading_885.4738pa.csv  matreading_956.3957pa.csv
prototypes/GUI/tests/: test_calibration.py
prototypes/PCB_no_RP2040/PCB_no_rp2040/: PCB_no_rp2040.kicad_prl  PCB_no_rp2040.kicad_pro
prototypes/c_example/: CMakeLists.txt  Readme.md  test.c
prototypes/c_spi/: CMakeLists.txt  Readme.md  main.c
prototypes/pico_dual_core/: CMakeLists.txt  Readme.md  test.c
prototypes/pico_dual_core/inc/: custom_multicore.h
prototypes/pico_dual_core/src/: custom_multicore.c
prototypes/raw_serial_transmission/: CMakeLists.txt  Readme.md  reciever.py  test.c
prototypes/raw_serial_transmission/inc/: transmitter.h
prototypes/raw_serial_transmission/src/: transmitter.c
tests/dummy_MAX11643BEEG/: CMakeLists.txt  Readme.md  main.c  main.py
